Bug 1825718 - map SVG elements to a role if they have an aria-label attribute r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D174465